--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,13 @@
     <groupId>consensus</groupId>
     <artifactId>consensus</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.2</version>
+        </dependency>
+
+    </dependencies>
 </project>
