--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,17 @@
                 <artifactId>commons-fileupload</artifactId>
                 <version>1.3.1</version>
             </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jstl</artifactId>
+                <version>1.2</version>
+            </dependency>
 
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.0.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
