--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,16 @@
                 <artifactId>javax.servlet-api</artifactId>
                 <version>3.0.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.api-client</groupId>
+                <artifactId>google-api-client</artifactId>
+                <version>1.20.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.apis</groupId>
+                <artifactId>google-api-services-drive</artifactId>
+                <version>v2-rev166-1.20.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
