--- a/web/pom.xml
+++ b/web/pom.xml
@@ -79,6 +79,10 @@
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-drive</artifactId>
         </dependency>
+        <dependency>
+            <groupId>consensus</groupId>
+            <artifactId>commons</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>consensus-web</finalName>
