--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>web</module>
         <module>standalone</module>
+        <module>commons</module>
     </modules>
 
     <properties>
@@ -106,6 +107,16 @@
                 <groupId>com.google.apis</groupId>
                 <artifactId>google-api-services-drive</artifactId>
                 <version>v2-rev166-1.20.0</version>
+            </dependency>
+            <dependency>
+                <groupId>consensus</groupId>
+                <artifactId>commons</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-mapper-asl</artifactId>
+                <version>1.9.13</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
