--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -55,7 +55,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>Main</mainClass>
+                            <mainClass>com.szczerbicki.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
