--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
                 <artifactId>jackson-mapper-asl</artifactId>
                 <version>1.9.13</version>
             </dependency>
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-core-asl</artifactId>
+                <version>1.9.13</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
