--- a/web/pom.xml
+++ b/web/pom.xml
@@ -83,6 +83,14 @@
             <groupId>consensus</groupId>
             <artifactId>commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>consensus-web</finalName>
