--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>2.4.1.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.5.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
